Fix #278: Add access to Stats from mobile + add scrollbar

--- a/meteor/imports/styles/partials/_mobile.scss
+++ b/meteor/imports/styles/partials/_mobile.scss
@@ -206,7 +206,7 @@ $mobile-screen-max: 768px;
       li {
         margin: 0;
         padding: 0;
-        width: 25%;
+        width: 20%;
         float: left;
         text-align: center;
 
