--- a/meteor/imports/styles/partials/_page.scss
+++ b/meteor/imports/styles/partials/_page.scss
@@ -703,6 +703,10 @@ ul.join-requests, ul.games {
   height: 100%;
 }
 
+#app {
+  overflow-y: auto;
+}
+
 #home {
   height: 100%;
 
